2019-03-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pkg.el ("eev"): added several fields.

2019-03-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el: updated the comments.

	* eev-beginner.el: don't change the load-path. Added comments.
	(eev-beginner): new function.

	* eev-intro.el (find-channels-intro): added some sections.

	* eev-channels.el: converted to UTF-8 and added comments.

2019-03-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-channels-intro): added sections with setup
	and tests.

	* eev-channels.el (eexterm-args-ne): made some arguments optional.
	(eexterm-create-ne): made some arguments optional.
	(eexterm-ne): made some arguments optional.

	* eev-intro.el (find-eev-quick-intro): small changes.

2019-03-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-texworkspdf-page): new function.
	(find-texworkspdf-page, code-texworkspdf-page): new functions.
	(find-pdftools-page): new function.

2019-03-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-load.el: "eev-prepared.el", "eev-bounded.el" and
	"eev-channels.el" are no longer loaded by default.

	* eev-elinks.el (ee-efunctiondescr-re): treat Lisp macros as
	functions.

	* eev-beginner.el: new file.

	* eev-intro.el (find-eev-quick-intro): the installation script now
	loads "eev-beginner.el" instead of "eev-readme.el".

	* eev-tlinks.el: added a "(require 'eev-wrap)".
	(find-tkdiff): moved to eev-plinks.el.
	(ee-upload-links, ee-download-links, find-upload-links)
	(find-download-links, ut, dt): commented out.
	(find-eev-install-links): use "rm -fv" instead of "rm -v".
	(find-eev-install-links): load "eev-beginner.el" instead of
	"eev-readme.el".
	(find-eev-install-links): changed "eev2-all.el" to "eev-load.el"
	everywhere.

	* eev-intro.el (find-eev-quick-intro): added material in the
	sections about links to PDFs.

2019-03-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-pdftotext-replace-bad-ffs): new function.