@@ -1,5 +1,5 @@
-(define-package "eev" "20190313" "Support for e-scripts (eepitch blocks, elisp hyperlinks, etc)"
-  nil
+(define-package "eev" "20190314" "Support for e-scripts (eepitch blocks, elisp hyperlinks, etc)"
+  '((emacs "24.3"))
   :keywords
   '("lisp" "e-scripts")
   :authors
